--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
     "bootstrap": "^4.3.1",
+    "eslint-plugin-import": "^2.16.0",
     "express": "^4.16.4",
     "next": "^8.0.3",
     "next-routes": "^1.4.2",
