--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react": "^16.8.2",
     "react-bootstrap": "^1.0.0-beta.5",
     "react-dom": "^16.8.2",
-    "react-scripts": "^2.1.5",
+    "react-scripts": "^2.1.8",
+    "roboto-fontface": "^0.10.0",
     "semantic-ui-css": "^2.2.14",
     "semantic-ui-react": "^0.85.0"
   },
