--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "description": "frontend prototype",
   "scripts": {
-    "dev": "next",
+    "dev": "node server.js",
     "start": "next start",
     "build": "next build"
   },
@@ -18,10 +18,14 @@
   "homepage": "https://github.com/pskanade/Anshdata_UI#readme",
   "dependencies": {
     "@atlaskit/page": "^9.0.3",
+    "axios": "^0.18.0",
+    "express": "^4.16.4",
     "next": "^8.0.4",
     "next-routes": "^1.4.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-redux": "^7.0.3",
+    "redux": "^4.0.1",
     "semantic-ui-react": "^0.86.0"
   }
 }
