--- a/package.json
+++ b/package.json
@@ -17,17 +17,19 @@
   },
   "homepage": "https://github.com/pskanade/Anshdata_UI#readme",
   "dependencies": {
-    "@atlaskit/page": "^9.0.3",
     "@zeit/next-sass": "^1.0.1",
-    "axios": "^0.18.0",
+    "axios": "^0.19.0",
+    "evergreen-ui": "^4.17.0",
     "express": "^4.16.4",
     "next": "^8.0.4",
     "next-routes": "^1.4.2",
     "node-sass": "^4.12.0",
+    "polished": "^3.4.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.0.3",
     "redux": "^4.0.1",
-    "semantic-ui-react": "^0.86.0"
+    "semantic-ui-react": "^0.86.0",
+    "styled-components": "^4.3.1"
   }
 }
