--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "^16.8.6",
     "react-redux": "^7.0.3",
     "redux": "^4.0.1",
+    "rsuite": "^3.8.6",
     "semantic-ui-react": "^0.86.0",
     "styled-components": "^4.3.1"
   }
