--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "polished": "^3.4.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-player": "^1.11.1",
     "react-redux": "^7.0.3",
     "redux": "^4.0.1",
     "rsuite": "^3.8.6",
