--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
     "next": "^8.1.0",
     "next-routes": "^1.4.2",
     "node-sass": "^4.12.0",
+    "nprogress": "^0.2.0",
     "polished": "^3.4.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-no-ssr": "^1.1.0",
     "react-player": "^1.11.1",
     "react-redux": "^7.1.0",
     "redux": "^4.0.4",
