--- a/package.json
+++ b/package.json
@@ -32,8 +32,13 @@
     "react-redux": "^7.1.0",
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
+    "redux-saga": "^1.0.5",
     "rsuite": "^3.8.6",
     "semantic-ui-react": "^0.86.0",
     "styled-components": "^4.3.1"
+  },
+  "devDependencies": {
+    "babel-eslint": "^10.0.2",
+    "eslint": "^6.0.1"
   }
 }
