--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "description": "frontend prototype",
   "scripts": {
-    "dev": "node server.js",
+    "dev": "next",
     "start": "next start",
     "build": "next build"
   },
@@ -21,7 +21,7 @@
     "axios": "^0.19.0",
     "evergreen-ui": "^4.17.0",
     "express": "^4.16.4",
-    "next": "^8.1.0",
+    "next": "^9.0.2",
     "next-routes": "^1.4.2",
     "node-sass": "^4.12.0",
     "nprogress": "^0.2.0",
