--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "redux-saga": "^1.0.5",
     "rsuite": "^3.8.6",
     "semantic-ui-react": "^0.86.0",
-    "styled-components": "^4.3.1"
+    "styled-components": "^4.3.1",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.2",
