--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "anshdata",
   "version": "0.1.0",
   "private": true,
-  "description": "frontend prototype",
+  "description": "frontend alpha",
   "scripts": {
     "flow": "flow",
     "dev": "next",
@@ -19,14 +19,11 @@
   "homepage": "https://github.com/pskanade/Anshdata_UI#readme",
   "dependencies": {
     "@zeit/next-sass": "^1.0.1",
-    "axios": "^0.19.0",
     "evergreen-ui": "^4.17.0",
-    "express": "^4.16.4",
     "next": "^9.0.2",
     "next-routes": "^1.4.2",
     "node-sass": "^4.12.0",
     "nprogress": "^0.2.0",
-    "polished": "^3.4.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-player": "^1.11.1",
@@ -35,8 +32,6 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-saga": "^1.0.5",
     "rsuite": "^3.8.6",
-    "semantic-ui-react": "^0.86.0",
-    "styled-components": "^4.3.1",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
