--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "devDependencies": {
     "babel-eslint": "^10.0.2",
     "eslint": "^6.0.1",
-    "flow-bin": "^0.103.0"
+    "flow-bin": "^0.103.0",
+    "prettier": "1.18.2"
   }
 }
